--- a/.github/workflows/test_and_lint.yml
+++ b/.github/workflows/test_and_lint.yml
@@ -37,13 +37,13 @@ jobs:
         name: Run Tests
 
   lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: erlef/setup-beam@v1
         with:
-          otp-version: 1.14
-          elixir-version: 25
+          otp-version: 25
+          elixir-version: 1.14
       - uses: actions/cache@v2
         with:
           path: |
